Publishing  drafts/learning_how_to_create_a_bass_line.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <meta id="keywords" name="keywords" content="music">
+        <meta id="keywords" name="keywords" content="music,music challenge">
         
         <title></title> 
         <link id="stylesheet" rel="stylesheet" type="text/css" href="../site.css"></link>
@@ -16,23 +16,24 @@
 
       <article class="article">
         <header>
-          <h2 class="title" id="title">First Impressions of Pure Data</h2> 
+          <h2 class="title" id="title">Learning the basics on how to create a bassline</h2> 
           <p class="summary" id="summary">
-            Some thoughts on Pure Data. Music day 4
+            Music Day 6 
           </p>
-          <p id="published-date" class="date"></p>
+          <p id="published-date" class="date">06/03/2019</p>
         </header> 
         
         <section id="content">
  
-          <p><a href="https://puredata.info/">Pure Data</a> (pd) is a visual musical  programming language that is also a synthesizer. It feels to me like a mixture of Scratch and Lisp. It is a graphic programming language, so you create blocks with objects, numbers, or messages, and you link them with cables. The metaphor is that you are plugging in cables from one module into another. A programming unit is called a patch, keeping up with modular synthesizer metaphor.</p>
+        <p>The bare minimum: have the bass play the root note of the current chord</p>
+        <p>The next step: have the bass play one of the notes in the current chord</p>
 
-          <p>I am using the <a href="http://www.pd-tutorial.com">Pd tutorial</a> as my guide to learning the language. I am about to finish the second chapter, and there is a series of patches that create small but interesting musical outputs.
-          </p>
+        <p>I know that there is a lot more to this. Yet this seems to be perfectly fine for someone who trying to learn the basics.</p>
 
-          <p>I hope that learning pd will allow me to explore sound, play with synths without having to buy expensive hardward, and to implement some ideas that I have had about aleatory music.</p>
+        <h3>References</h3>
+        <a href="https://music.tutsplus.com/tutorials/beginners-guide-to-writing-better-bass-lines--cms-19879">Beginner's guide to write better bass lines</a><br />
+        <a href="https://www.musicradar.com/how-to/bass-basics-working-around-root-notes">Bass basics</a><br />
         </section>
-
 
         <section class="tags">
           Tags: <span id="tags"></span>
