Publishing  drafts/exploring_chord_progressions.html

--- a/index.html
+++ b/index.html
@@ -16,20 +16,19 @@
 
       <article class="article">
         <header>
-          <h2 class="title" id="title">Reflection on Day 7</h2> 
+          <h2 class="title" id="title">Exploring Chord Progressions</h2> 
           <p class="summary" id="summary">
            
           </p>
           <p id="published-date" class="date"></p>
-        </header> 
-        
         <section id="content">
  
-        <p>This is 7 days from the point where I started this music deeper learning. After this week I have learned many details about song structure and some basic techinques on how to put together a song. I feel that I have enough information to move on to practicing. This will be the focus for this week.</p>
+        <p>Last week I created a ridiculously simple melody while I was playing a drum beat on the drum machine app. It is essentially C played many times in a row ending with a few keystrokes on D and E.</p>
 
-        <p>Ideally I would be talking about making a song a day, as in the drawing challenges. The reality is that I am probably not good enough to get a bad song made in that short period of time. What I think is more likely is to try to get a bad song made during the week, with a melody, chord progression, and bassline.  I will probably explore the simpler genres because we must start from somewhere.</p>
+        <p>Yesterday I transcribed the melody into the LMMS, confirmed its structure a bit, and then I grabbed the ukulele to find some simple chords for it. I used the three chord principle as a starting point. The first progression that I got worked, but it was very dull. Then I started to play with some other possible chords to see if I could break up the monotony.</p>
 
-        <p>I know it will be bad. Everything we start doing is bad to begin with. And that is okay. It is fun to learn this. It is fun to try to make music. And if what I get out of this exercise is a deeper appreciation of music and the people who make it. </p> 
+        <p>What I have emotionally learned is how different the same melody can sound with different chord progressions. I knew that this was true in the past. I have even seen some videos where they demonstrate this. Yet there is this thing about doing the work yourself that makes you learn it profoundly.</p>
+
         </section>
 
 
