Publishing  drafts/great_video_on_harmonies.html

--- a/index.html
+++ b/index.html
@@ -16,18 +16,17 @@
 
       <article class="article">
         <header>
-          <h2 class="title" id="title">Exploring Chord Progressions</h2> 
+          <h2 class="title" id="title">Great Video on Harmonies</h2> 
           <p class="summary" id="summary">
-           
+            Music Day 9 
           </p>
           <p id="published-date" class="date"></p>
+        </header> 
+        
         <section id="content">
  
-        <p>Last week I created a ridiculously simple melody while I was playing a drum beat on the drum machine app. It is essentially C played many times in a row ending with a few keystrokes on D and E.</p>
+          <p> I ran into this great <a href="https://youtu.be/GUEUlw3rDEc">video on harmonies</a>. It is in Spanish, but maybe, just maybe, the specialized language and the visuals may be enough for people to understand the material. It truly is one of the best videos I have seen on the subject.</p>
 
-        <p>Yesterday I transcribed the melody into the LMMS, confirmed its structure a bit, and then I grabbed the ukulele to find some simple chords for it. I used the three chord principle as a starting point. The first progression that I got worked, but it was very dull. Then I started to play with some other possible chords to see if I could break up the monotony.</p>
-
-        <p>What I have emotionally learned is how different the same melody can sound with different chord progressions. I knew that this was true in the past. I have even seen some videos where they demonstrate this. Yet there is this thing about doing the work yourself that makes you learn it profoundly.</p>
 
         </section>
 
